...
	<!-- ========================= GLOBAL ================================== -->
	<!-- =================================================================== -->

	<string name="global_error_message">An unexpected error has occurred</string>
	<string name="global_exit_confirm_message">Are you sure you want to exit?</string>

	<string name="global_button_ok">OK</string>
	<string name="global_button_cancel">Cancel</string>
	<string name="global_processing">Processing</string>
	<string name="global_button_clean">Clean</string>
	<string name="global_button_add">Add</string>

	<string name="global_spinner_select_option">-- Select --</string>
...

	<!-- =================================================================== -->
	<!-- ========================= DIALOGS ================================= -->
	<!-- =================================================================== -->

	<!-- Confirm dialog -->
	<string name="confirm_dlg_title">Confirm</string>

	<!-- Tempo dialog -->
	<string name="tempo_dlg_title">Change Tempo</string>
	<string name="tempo_dlg_tempo_label">Tempo:</string>
	<string name="tempo_dlg_options_apply_to_song">Apply this Tempo in the whole Song</string>
	<string name="tempo_dlg_options_apply_to_end">Apply this Tempo to the end</string>
	<string name="tempo_dlg_options_apply_to_next_marker">Apply this Tempo to the next Tempo Marker</string>

	<!-- Clef dialog -->
...
